--- a/Share/1010490001.html
+++ b/Share/1010490001.html
@@ -17,15 +17,13 @@ ShowVEpubDownload('2022/11/7 (108K)');
 BookSectionEnd();
 ?>
 <img src="covers/1010490001.png" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝李思聰整理製作。譯者許懷文。<br>
+好讀書櫃《典藏版》，譯者許懷文。感謝李思聰整理製作。感謝chin223提供掃描檔<br>
 <br>
 <b>作者簡介：</b><br>
 <br>
 <br>
-<br>
 <b>作品簡介：</b><br>
-<br>
-<br>
+東京百年老舖不止讓我們有伴手禮，更蘊藏感人的心情薈萃、世代創新經營的好故事。跟隨本書走訪日本東京之際，一路細味百年老店精神及其優質產品，同時感受生活確幸、人情智慧的美好傳承。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
