Corrected typos for book 1010490002

--- a/Share/1010490002.html
+++ b/Share/1010490002.html
@@ -12,12 +12,12 @@ $title = '冰雪美人';
 $book = 'P1010490002';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/4 (277KB)');
-ShowVEpubDownload('2022/11/4 (277KB)');
+ShowEpubDownload('2022/11/4 (294KB)');
+ShowVEpubDownload('2022/11/4 (294KB)');
 BookSectionEnd();
 ?>
 <img src="covers/1010490002.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝張琬妤整理製作。<br>
+好讀書櫃《典藏版》，感謝Wanyu整理製作。<br>
 <br>
 <b>作品簡介：</b><br>
 <br>
