Added book cover clipart for 醉枕江山

--- a/book/16L8.html
+++ b/book/16L8.html
@@ -19,7 +19,7 @@ ShowEpubDownload('2016/10/7 (140K) 2017/4/7');
 ShowVEpubDownload('2016/10/7 (141K) 2017/4/7');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝嘉明整理製作。感謝鄧乃昌勘誤41處。<br>
+<img src="covers/1010490010.jpg" HSPACE=8 align=right>好讀書櫃《經典版》，感謝嘉明整理製作。感謝鄧乃昌勘誤41處。<br>
 <br>
 《醉枕江山》2012年10月20日起連載於起點中文網，2014年5月10日創作完成。全書共三十卷。<br>
 <br>
