--- a/book/16M0.html
+++ b/book/16M0.html
@@ -19,7 +19,7 @@ ShowEpubDownload('2016/10/7 (114K)');
 ShowVEpubDownload('2016/10/7 (114K)');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝嘉明整理製作。感謝鄧乃昌勘誤30處。<br>
+<img src="covers/1010490010.jpg" HSPACE=8 align=right>好讀書櫃《經典版》，感謝嘉明整理製作。感謝鄧乃昌勘誤30處。<br>
 <br>
 <b>《醉枕江山三：莊周夢蝶》內容提要</b><br>
 <br>
