--- a/book/16L9.html
+++ b/book/16L9.html
@@ -19,7 +19,7 @@ ShowEpubDownload('2016/10/7 (148K) 2017/4/7');
 ShowVEpubDownload('2016/10/7 (148K) 2017/4/7');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝嘉明整理製作。感謝鄧乃昌勘誤35處。<br>
+<img src="covers/1010490010.jpg" HSPACE=8 align=right>好讀書櫃《經典版》，感謝嘉明整理製作。感謝鄧乃昌勘誤35處。<br>
 <br>
 <b>《醉枕江山二：空掌招蝶》內容提要</b><br>
 <br>
