--- a/Share/1010490002.html
+++ b/Share/1010490002.html
@@ -17,7 +17,7 @@ ShowVEpubDownload('2022/11/4 (294KB)');
 BookSectionEnd();
 ?>
 <img src="covers/1010490002.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝Wanyu整理製作。<br>
+好讀書櫃【典藏版】，感謝Wanyu整理製作。<br>
 <br>
 <b>作品簡介：</b><br>
 <br>
