--- a/Share/1010490004.html
+++ b/Share/1010490004.html
@@ -17,7 +17,7 @@ ShowVEpubDownload('2022/11/15 (111KB)');
 BookSectionEnd();
 ?>
 <img src="covers/1010490004.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝Wanyu整理製作。感謝doomsday提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Wanyu整理製作。感謝doomsday提供掃瞄檔。<br>
 <br>
 <b>本書簡介：</b><br>
 <br>
