--- a/Share/1010490008.html
+++ b/Share/1010490008.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("凱倫．阿姆斯壯《為神而戰》");
+SetTitle("凱倫．阿姆斯壯【為神而戰】");
 SetLink('<a href="?M=hd&P=wisdom-6">隨身智囊 書目</a>');
 </script>
 
@@ -8,7 +8,7 @@ SetLink('<a href="?M=hd&P=wisdom-6">隨身智囊 書目</a>');
 <?php
 require_once('show-book.php');
 $author = '凱倫．阿姆斯壯';
-$title = '《為神而戰》';
+$title = '為神而戰';
 $book = 'P1010490008';
 BookSectionBegin();
 ShowBookTitle();
@@ -17,7 +17,7 @@ ShowVEpubDownload('2022/11/18 (496KB)');
 BookSectionEnd();
 ?>
 <img src="covers/1010490008.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝Ann Cheng整理製作和提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Ann Cheng整理製作和提供掃瞄檔。<br>
 <br>
 <b>本書簡介：</b><br>
 <br>
