--- a/Share/1010490011.html
+++ b/Share/1010490011.html
@@ -8,19 +8,50 @@ SetLink('<a href="?M=hd&P=fiction-3">小說園地 書目</a>');
 <?php
 require_once('show-book.php');
 $author = '月關';
-$title = '《醉枕江山卷六：我是傳奇》';
+$title = '醉枕江山卷六：我是傳奇';
 $book = 'P1010490011';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/22 (158KB)');
-ShowVEpubDownload('2022/11/22 (158KB)');
+ShowEpubDownload('2022/11/23 (158KB)');
+ShowVEpubDownload('2022/11/23 (158KB)');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝LIMing整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。<br>
 <br>
 <b>本書簡介：</b><br>
 <br>
+女帝武曌日月凌空，上官婉兒稱量天下，<br>
+李裹兒艷比花嬌，五姓子勾心鬥角，<br>
+太平公主難太平，李家三郎真隆基，<br>
+狄仁傑、張易之、馮小寶……<br>
+才子、佳人、屠狗輩！<br>
+紅袖招，遊俠兒，遊走大唐天空下，<br>
+醉臥枕江山，談笑望乾坤！<br>
+<br>
+第6卷 我是傳奇<br>
+第124章 上元佳節<br>
+第125章 巧相逢<br>
+第126章 雌兒當雌伏<br>
+第127章 第一次親密接觸<br>
+第128章 把你手兒牽<br>
+第129章 你是我的初吻<br>
+第130章 小郎君，好拳腿！<br>
+第131章 下駟對上駟<br>
+第132章 造神<br>
+第133章 酒肉穿腸過<br>
+第134章 白馬對回鶻<br>
+第135章 擊鞠全武行<br>
+第136章 問鼎<br>
+第137章 誰願隨某一戰？<br>
+第138章 大唐兒女驕<br>
+第139章 我是傳奇！<br>
+<br>
+<b>作者簡介：</b><br>
+<br>
+月關，原名魏立軍，起點中文網白金作家，中國作協會員。遼寧文學院客座教授，上海視覺藝術學院客座教授，遼寧政協知聯會會員。其處女作《回到明朝當王爺》橫掃網路，囊括多項年終大獎，連續五年佔據台灣圖書館借閱榜第一名。2013年佔據台灣高雄市立圖書館年度借閱排行榜第二名。2009年《回到明朝當王爺》進入「網路文學十年盤點」評選，入選十大人氣作品第六名，《大爭之世》，《步步生蓮》入榜台灣圖書借閱榜前二十名《錦衣夜行》榮獲台灣金石堂銷量第一名。<br>
+<br>
+2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
