--- a/Share/1010490012.html
+++ b/Share/1010490012.html
@@ -8,19 +8,70 @@ SetLink('<a href="?M=hd&P=fiction-3">小說園地 書目</a>');
 <?php
 require_once('show-book.php');
 $author = '月關';
-$title = '《醉枕江山卷七：小兵楊帆》';
+$title = '醉枕江山卷七：小兵楊帆';
 $book = 'P1010490012';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/22 (268KB)');
-ShowVEpubDownload('2022/11/22 (268KB)');
+ShowEpubDownload('2022/11/23 (268KB)');
+ShowVEpubDownload('2022/11/23 (268KB)');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝LIMing整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。<br>
 <br>
 <b>本書簡介：</b><br>
 <br>
+女帝武曌日月凌空，上官婉兒稱量天下，<br>
+李裹兒艷比花嬌，五姓子勾心鬥角，<br>
+太平公主難太平，李家三郎真隆基，<br>
+狄仁傑、張易之、馮小寶……<br>
+才子、佳人、屠狗輩！<br>
+紅袖招，遊俠兒，遊走大唐天空下，<br>
+醉臥枕江山，談笑望乾坤！<br>
+<br>
+第7卷 小兵楊帆<br>
+第140章 哥們要出息<br>
+第141章 唐僧肉<br>
+第142章 這妮兒忒窈窕哩！<br>
+第143章 初梅若紅豆<br>
+第144章 雪劍冰心<br>
+第145章 神秘嘉賓<br>
+第146章 三少也坑爹<br>
+第147章 吾不欲肖母<br>
+第148章 碰不得的妞妞<br>
+第149章 溯游從之，宛在水中央<br>
+第150章 美麗的誤會<br>
+第151章 罵倒關夫子<br>
+第152章 心湖起漣漪<br>
+第153章 不一樣的女人<br>
+第154章 惱人的春風<br>
+第155章 龍門風雲起<br>
+第156章 誰能躍龍門<br>
+第157章 奪儲之議<br>
+第158章 “採花”大盜<br>
+第159章 霸道的男人<br>
+第160章 神秘姜公子<br>
+第161章 棒打鴛鴦謝小蠻<br>
+第162章 這個傢伙不太壞<br>
+第163章 待詔有請<br>
+第164章 婉兒是一朵奇葩！<br>
+第165章 人約黃昏後<br>
+第166章 御姐還是蘿莉<br>
+第167章 為郎巧謀劃<br>
+第168章 智者樂水<br>
+第169章 太平拒婚<br>
+第170章 宗室屠如狗<br>
+第171章 一場交易<br>
+第172章 眾里尋他千百度<br>
+第173章 夜訪春閨<br>
+第174章 楊帆的成人禮<br>
+第175章 悲喜兩扇門<br>
+<br>
+<b>作者簡介：</b><br>
+<br>
+月關，原名魏立軍，起點中文網白金作家，中國作協會員。遼寧文學院客座教授，上海視覺藝術學院客座教授，遼寧政協知聯會會員。其處女作《回到明朝當王爺》橫掃網路，囊括多項年終大獎，連續五年佔據台灣圖書館借閱榜第一名。2013年佔據台灣高雄市立圖書館年度借閱排行榜第二名。2009年《回到明朝當王爺》進入「網路文學十年盤點」評選，入選十大人氣作品第六名，《大爭之世》，《步步生蓮》入榜台灣圖書借閱榜前二十名《錦衣夜行》榮獲台灣金石堂銷量第一名。<br>
+<br>
+2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
