--- a/Share/1010490013.html
+++ b/Share/1010490013.html
@@ -8,19 +8,69 @@ SetLink('<a href="?M=hd&P=fiction-3">小說園地 書目</a>');
 <?php
 require_once('show-book.php');
 $author = '月關';
-$title = '《醉枕江山卷八：百騎風雲》';
+$title = '醉枕江山卷八：百騎風雲';
 $book = 'P1010490013';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/22 (265KB)');
-ShowVEpubDownload('2022/11/22 (265KB)');
+ShowEpubDownload('2022/11/23 (265KB)');
+ShowVEpubDownload('2022/11/23 (265KB)');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝LIMing整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。<br>
 <br>
 <b>本書簡介：</b><br>
 <br>
+女帝武曌日月凌空，上官婉兒稱量天下，<br>
+李裹兒艷比花嬌，五姓子勾心鬥角，<br>
+太平公主難太平，李家三郎真隆基，<br>
+狄仁傑、張易之、馮小寶……<br>
+才子、佳人、屠狗輩！<br>
+紅袖招，遊俠兒，遊走大唐天空下，<br>
+醉臥枕江山，談笑望乾坤！<br>
+<br>
+第8卷 百騎風雲<br>
+第176章 踏破鐵鞋無覓處<br>
+第177章 避世苗神客<br>
+第178章 一杯斷腸酒<br>
+第179章 騎驢遠來人<br>
+第180章 要他做陪嫁<br>
+第181章 婉轉女兒心<br>
+第182章 哥真是草根<br>
+第183章 渴望<br>
+第184章 婉兒居然是文盲<br>
+第185章 我來也！<br>
+第186章 漏網之魚<br>
+第187章 墊腳石<br>
+第188章 被自殺<br>
+第189章 黑齒常之<br>
+第190章 老狐狸<br>
+第191章 老狐狸和小狐狸<br>
+第192章 笑面虎<br>
+第193章 女奸細<br>
+第194章 生亦何難<br>
+第195章 母親！<br>
+第196章 共同秘密<br>
+第197章 吾道不孤<br>
+第198章 謀而後動<br>
+第199章 那個小傢伙<br>
+第200章 原來如此<br>
+第201章 好兒好女<br>
+第202章 勸進！<br>
+第203章 元芳，你看如何？<br>
+第204章 初九成親日<br>
+第205章 婚禮<br>
+第206章 風波<br>
+第207章 七姑娘駕到！<br>
+第208章 英雄氣短<br>
+第209章 如冰似火意朦朧<br>
+第210章 就是今天！<br>
+<br>
+<b>作者簡介：</b><br>
+<br>
+月關，原名魏立軍，起點中文網白金作家，中國作協會員。遼寧文學院客座教授，上海視覺藝術學院客座教授，遼寧政協知聯會會員。其處女作《回到明朝當王爺》橫掃網路，囊括多項年終大獎，連續五年佔據台灣圖書館借閱榜第一名。2013年佔據台灣高雄市立圖書館年度借閱排行榜第二名。2009年《回到明朝當王爺》進入「網路文學十年盤點」評選，入選十大人氣作品第六名，《大爭之世》，《步步生蓮》入榜台灣圖書借閱榜前二十名《錦衣夜行》榮獲台灣金石堂銷量第一名。<br>
+<br>
+2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
