--- a/Share/1010490014.html
+++ b/Share/1010490014.html
@@ -8,19 +8,63 @@ SetLink('<a href="?M=hd&P=fiction-3">小說園地 書目</a>');
 <?php
 require_once('show-book.php');
 $author = '月關';
-$title = '《醉枕江山卷九：隴右烽煙》';
+$title = '醉枕江山卷九：隴右烽煙';
 $book = 'P1010490014';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/22 (249KB)');
-ShowVEpubDownload('2022/11/22 (249KB)');
+ShowEpubDownload('2022/11/23 (249KB)');
+ShowVEpubDownload('2022/11/23 (249KB)');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝LIMing整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。<br>
 <br>
 <b>本書簡介：</b><br>
+女帝武曌日月凌空，上官婉兒稱量天下，<br>
+李裹兒艷比花嬌，五姓子勾心鬥角，<br>
+太平公主難太平，李家三郎真隆基，<br>
+狄仁傑、張易之、馮小寶……<br>
+才子、佳人、屠狗輩！<br>
+紅袖招，遊俠兒，遊走大唐天空下，<br>
+醉臥枕江山，談笑望乾坤！<br>
 <br>
+第9卷 隴右烽煙<br>
+第211章 萬象神宮<br>
+第212章 某非奴顏輩<br>
+第213章 機會來了<br>
+第214章 男兒當建功<br>
+第215章 浪漫滿屋<br>
+第216章 一夜無眠<br>
+第217章 雨中花<br>
+第218章 將欲行<br>
+第219章 漫漫西行路<br>
+第220章 一拍即合<br>
+第221章 酒如血<br>
+第222章 無孔不入<br>
+第223章 八百湟谷<br>
+第224章 同相奇緣<br>
+第225章 接風宴<br>
+第226章 安排<br>
+第227章 重任在肩<br>
+第228章 簡單任務<br>
+第229章 苦行僧<br>
+第230章 可汗我來立！<br>
+第231章 意外遇襲<br>
+第232章 烏質勒<br>
+第233章 “隆中對”<br>
+第234章 我有一計<br>
+第235章 吐蕃王城<br>
+第236章 魚目混珠<br>
+第237章 不殺而殺<br>
+第238章 說也說不清楚<br>
+第239章 變生肘腋<br>
+第240章 風雲再起<br>
+<br>
+<b>作者簡介：</b><br>
+<br>
+月關，原名魏立軍，起點中文網白金作家，中國作協會員。遼寧文學院客座教授，上海視覺藝術學院客座教授，遼寧政協知聯會會員。其處女作《回到明朝當王爺》橫掃網路，囊括多項年終大獎，連續五年佔據台灣圖書館借閱榜第一名。2013年佔據台灣高雄市立圖書館年度借閱排行榜第二名。2009年《回到明朝當王爺》進入「網路文學十年盤點」評選，入選十大人氣作品第六名，《大爭之世》，《步步生蓮》入榜台灣圖書借閱榜前二十名《錦衣夜行》榮獲台灣金石堂銷量第一名。<br>
+<br>
+2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
