--- a/Share/1010490015.html
+++ b/Share/1010490015.html
@@ -30,7 +30,7 @@ BookSectionEnd();
 <br>
 第10卷 探驪取珠<br>
 第241章 一條鯰魚<br>
-第242章 奇襲‘大箭頭’<br>
+第242章 奇襲「大箭頭」<br>
 第243章 自行腦補<br>
 第244章 踽踽獨行人<br>
 第245章 別有隱情<br>
