--- a/book/audioAB001.html
+++ b/book/audioAB001.html
@@ -9,6 +9,8 @@ require_once('player.php');
 
 PlayMP3('AB001-01', '第一篇《伊尹：從廚子到名相》書亞錄音 2022/11/14');
 PlayMP3('AB001-02', '第二篇《易牙：缺德的廚神》書亞錄音 2022/11/21');
+PlayMP3('AB001-03', '第三篇《趙盾：施食得恩報》書亞錄音 2022/11/28');
+PlayMP3('AB001-04', '第四篇《孔子：食禮趣聞》書亞錄音 2022/11/28');
 
 ?>
 
