Updated author information for book 1010490038

--- a/Share/1010490038.html
+++ b/Share/1010490038.html
@@ -31,6 +31,12 @@ BookSectionEnd();
 <br>
 他首次在台灣的中文譯本《魔法外套》顯現出的神奇魔力，就已受到各界好評，人們從書中獲得了另類的閱讀快感，而這次的長篇小說——《韃靼荒漠》曾榮獲「哈普林．卡明斯基獎」，是奠定布扎第文學地位的長篇小說代表作，曾在1976被改編拍成電影。<br>
 <br>
+譯者簡介：<br>
+<br>
+梁若瑜<br>
+<br>
+愛好閱讀，曾旅居法國多年。目前就讀東吳心理系，並從事翻譯工作。譯有《華人性格研究》（合譯，遠流出版）、《準父母胎教經典》（新手父母出版）。<br>
+<br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
 </font>
