Revised upload of book 1010490036

--- a/Share/1010490036.html
+++ b/Share/1010490036.html
@@ -12,8 +12,8 @@ $title = '夜行馬戲團';
 $book = 'P1010490036';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/24 (384KB)');
-ShowVEpubDownload('2022/11/24 (384KB)');
+ShowEpubDownload('2022/12/6 (432KB) 2022/11/24');
+ShowVEpubDownload('2022/12/6 (432KB) 2022/11/24');
 BookSectionEnd();
 ?>
 <img src="covers/1010490036.jpg" HSPACE=8 align=right>
@@ -64,6 +64,34 @@ BookSectionEnd();
 荷蘭葛洛寧恩大學英語語言與文化碩士，主修文學。譯作有《寫給離家出走的女兒》、《玩命處方箋》、《失物之書》、《鋼琴教師的情人》、《歸鄉路》、《她的對稱靈魂》、《失落的秘密手稿》等。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<a href="?M=hd&P=pr"><strong>勘誤表</strong></a>：<br>
+<br>
+(sue1289 2022/12/6)<br>
+撞量了頭/撞暈了頭<br>
+醜角/丑角<br>
+L『Amoureux/L＇Amoureux<br>
+天空藍/天空藍。<br>
+花稍/花俏<br>
+是是木頭/是木頭<br>
+勃根地/勃艮地<br>
+濁火/燭火<br>
+相形見拙/相形見絀<br>
+眨損/貶損<br>
+疑賣/疑竇<br>
+？。/？<br>
+d『Epee』s/d'Epee's<br>
+先生先生/先生<br>
+會場擺滿/  會場擺滿<br>
+進去．我想/進去。我想<br>
+事情．也從/事情，也從<br>
+馬克/馬可<br>
+掏捧她/掬捧她<br>
+那攤鮮血/那灘鮮血<br>
+那攤墨水/那灘墨水<br>
+長鍵/長鏈<br>
+歐丁．兩者/歐丁。兩者<br>
+還氣味/還有氣味<br>
+走過一趙/走過一趟<br>
+衰亡．事情/衰亡，事情<br>
 </font>
 </td></tr></table>
