Added back the button for uPDB file download

--- a/Share/1010490001.html
+++ b/Share/1010490001.html
@@ -12,8 +12,9 @@ $title = '東京百年老舖';
 $book = 'P1010490001';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/1 (108KB)');
-ShowVEpubDownload('2022/11/1 (108KB)');
+ShowUpdbDownload('2022/11/1');
+ShowEpubDownload('2022/11/1');
+ShowVEpubDownload('2022/11/1');
 BookSectionEnd();
 ?>
 <img src="covers/1010490001.jpg" HSPACE=8 align=right>
