--- a/Share/1010490002.html
+++ b/Share/1010490002.html
@@ -12,8 +12,9 @@ $title = '冰雪美人';
 $book = 'P1010490002';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/4 (294KB)');
-ShowVEpubDownload('2022/11/4 (294KB)');
+ShowUpdbDownload('2022/11/4');
+ShowEpubDownload('2022/11/4');
+ShowVEpubDownload('2022/11/4');
 BookSectionEnd();
 ?>
 <img src="covers/1010490002.jpg" HSPACE=8 align=right>
