--- a/Share/1010490003.html
+++ b/Share/1010490003.html
@@ -12,8 +12,9 @@ $title = '鱷魚的黃眼睛';
 $book = 'P1010490003';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/22 (530KB)');
-ShowVEpubDownload('2022/11/22 (530KB)');
+ShowUpdbDownload('2022/11/22');
+ShowEpubDownload('2022/11/22');
+ShowVEpubDownload('2022/11/22');
 BookSectionEnd();
 ?>
 <img src="covers/1010490003.jpg" HSPACE=8 align=right>
