--- a/Share/1010490004.html
+++ b/Share/1010490004.html
@@ -12,8 +12,9 @@ $title = '不歸路';
 $book = 'P1010490004';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/15 (111KB)');
-ShowVEpubDownload('2022/11/15 (111KB)');
+ShowUpdbDownload('2022/11/15');
+ShowEpubDownload('2022/11/15');
+ShowVEpubDownload('2022/11/15');
 BookSectionEnd();
 ?>
 <img src="covers/1010490004.jpg" HSPACE=8 align=right>
