--- a/Share/1010490005.html
+++ b/Share/1010490005.html
@@ -12,8 +12,9 @@ $title = '吉祥紋蓮花樓卷一：朱雀';
 $book = 'P1010490005';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/21 (216KB)');
-ShowVEpubDownload('2022/11/21 (216KB)');
+ShowUpdbDownload('2022/11/21');
+ShowEpubDownload('2022/11/21');
+ShowVEpubDownload('2022/11/21');
 BookSectionEnd();
 ?>
 <img src="covers/1010490005.jpg" HSPACE=8 align=right>
