--- a/Share/1010490006.html
+++ b/Share/1010490006.html
@@ -12,8 +12,9 @@ $title = '吉祥紋蓮花樓卷二：玄武';
 $book = 'P1010490006';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/21 (163KB)');
-ShowVEpubDownload('2022/11/21 (163KB)');
+ShowUpdbDownload('2022/11/21');
+ShowEpubDownload('2022/11/21');
+ShowVEpubDownload('2022/11/21');
 BookSectionEnd();
 ?>
 <img src="covers/1010490006.jpg" HSPACE=8 align=right>
