--- a/Share/1010490007.html
+++ b/Share/1010490007.html
@@ -12,8 +12,9 @@ $title = '吉祥紋蓮花樓卷三：青龍';
 $book = 'P1010490007';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/22 (167KB)');
-ShowVEpubDownload('2022/11/22 (167KB)');
+ShowUpdbDownload('2022/11/22');
+ShowEpubDownload('2022/11/22');
+ShowVEpubDownload('2022/11/22');
 BookSectionEnd();
 ?>
 <img src="covers/1010490007.jpg" HSPACE=8 align=right>
