--- a/Share/1010490008.html
+++ b/Share/1010490008.html
@@ -12,8 +12,9 @@ $title = '為神而戰';
 $book = 'P1010490008';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/18 (496KB)');
-ShowVEpubDownload('2022/11/18 (496KB)');
+ShowUpdbDownload('2022/11/18');
+ShowEpubDownload('2022/11/18');
+ShowVEpubDownload('2022/11/18');
 BookSectionEnd();
 ?>
 <img src="covers/1010490008.jpg" HSPACE=8 align=right>
