--- a/Share/1010490009.html
+++ b/Share/1010490009.html
@@ -8,12 +8,13 @@ SetLink('<a href="?M=hd&P=wisdom-6">隨身智囊 書目</a>');
 <?php
 require_once('show-book.php');
 $author = '勞勃．勒范恩';
-$title = '【時間地圖】';
+$title = '時間地圖';
 $book = 'P1010490009';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/18 (208KB)');
-ShowVEpubDownload('2022/11/18 (208KB)');
+ShowUpdbDownload('2022/11/18');
+ShowEpubDownload('2022/11/18');
+ShowVEpubDownload('2022/11/18');
 BookSectionEnd();
 ?>
 <img src="covers/1010490009.jpg" HSPACE=8 align=right>
