--- a/Share/1010490010.html
+++ b/Share/1010490010.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷五：白馬和尚';
 $book = 'P1010490010';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/23 (196KB)');
-ShowVEpubDownload('2022/11/23 (196KB)');
+ShowUpdbDownload('2022/11/23');
+ShowEpubDownload('2022/11/23');
+ShowVEpubDownload('2022/11/23');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
