--- a/Share/1010490013.html
+++ b/Share/1010490013.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷八：百騎風雲';
 $book = 'P1010490013';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/23 (265KB)');
-ShowVEpubDownload('2022/11/23 (265KB)');
+ShowUpdbDownload('2022/11/23');
+ShowEpubDownload('2022/11/23');
+ShowVEpubDownload('2022/11/23');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
