--- a/Share/1010490014.html
+++ b/Share/1010490014.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷九：隴右烽煙';
 $book = 'P1010490014';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/23 (249KB)');
-ShowVEpubDownload('2022/11/23 (249KB)');
+ShowUpdbDownload('2022/11/23');
+ShowEpubDownload('2022/11/23');
+ShowVEpubDownload('2022/11/23');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
