--- a/Share/1010490015.html
+++ b/Share/1010490015.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷十：探驪取珠';
 $book = 'P1010490015';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/28 (190KB)');
-ShowVEpubDownload('2022/11/28 (190KB)');
+ShowUpdbDownload('2022/11/28');
+ShowEpubDownload('2022/11/28');
+ShowVEpubDownload('2022/11/28');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
