--- a/Share/1010490019.html
+++ b/Share/1010490019.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷十四：頭角初嶄';
 $book = 'P1010490019';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/30 (174KB)');
-ShowVEpubDownload('2022/11/30 (174KB)');
+ShowUpdbDownload('2022/11/30');
+ShowEpubDownload('2022/11/30');
+ShowVEpubDownload('2022/11/30');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
