--- a/Share/1010490020.html
+++ b/Share/1010490020.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷十五：大法官';
 $book = 'P1010490020';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/12/2 (221KB)');
-ShowVEpubDownload('2022/12/2 (221KB)');
+ShowUpdbDownload('2022/12/2');
+ShowEpubDownload('2022/12/2');
+ShowVEpubDownload('2022/12/2');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
