--- a/Share/1010490021.html
+++ b/Share/1010490021.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷十六：美人恩';
 $book = 'P1010490021';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/12/2 (289KB)');
-ShowVEpubDownload('2022/12/2 (289KB)');
+ShowUpdbDownload('2022/12/2');
+ShowEpubDownload('2022/12/2');
+ShowVEpubDownload('2022/12/2');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
