--- a/Share/1010490024.html
+++ b/Share/1010490024.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷十九：長安無數山';
 $book = 'P1010490024';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/12/2 (392KB)');
-ShowVEpubDownload('2022/12/2 (392KB)');
+ShowUpdbDownload('2022/12/5');
+ShowEpubDownload('2022/12/5');
+ShowVEpubDownload('2022/12/5');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
