--- a/Share/1010490036.html
+++ b/Share/1010490036.html
@@ -12,8 +12,9 @@ $title = '夜行馬戲團';
 $book = 'P1010490036';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/12/6 (432KB) 2022/11/24');
-ShowVEpubDownload('2022/12/6 (432KB) 2022/11/24');
+ShowUpdbDownload('2022/12/6 | 2022/11/24');
+ShowEpubDownload('2022/12/6 | 2022/11/24');
+ShowVEpubDownload('2022/12/6 | 2022/11/24');
 BookSectionEnd();
 ?>
 <img src="covers/1010490036.jpg" HSPACE=8 align=right>
