--- a/Share/1010490037.html
+++ b/Share/1010490037.html
@@ -12,8 +12,9 @@ $title = '唐詩韻史－金縷衣';
 $book = 'P1010490037';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/25 (94KB)');
-ShowVEpubDownload('2022/11/25 (94KB)');
+ShowUpdbDownload('2022/11/25');
+ShowEpubDownload('2022/11/25');
+ShowVEpubDownload('2022/11/25');
 BookSectionEnd();
 ?>
 <img src="covers/1010490037.jpg" HSPACE=8 align=right>
