--- a/Share/1010490038.html
+++ b/Share/1010490038.html
@@ -12,8 +12,9 @@ $title = '韃靼荒漠';
 $book = 'P1010490038';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/12/2 (193KB)');
-ShowVEpubDownload('2022/12/2 (193KB)');
+ShowUpdbDownload('2022/12/2');
+ShowEpubDownload('2022/12/2');
+ShowVEpubDownload('2022/12/2');
 BookSectionEnd();
 ?>
 <img src="covers/1010490038.jpg" HSPACE=8 align=right>
