--- a/Share/1010490039.html
+++ b/Share/1010490039.html
@@ -12,8 +12,9 @@ $title = '紙牌的祕密';
 $book = 'P1010490039';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/12/5 (216KB)');
-ShowVEpubDownload('2022/12/5 (216KB)');
+ShowUpdbDownload('2022/12/7');
+ShowEpubDownload('2022/12/7');
+ShowVEpubDownload('2022/12/7');
 BookSectionEnd();
 ?>
 <img src="covers/1010490039.jpg" HSPACE=8 align=right>
