--- a/Share/1010490040.html
+++ b/Share/1010490040.html
@@ -12,8 +12,9 @@ $title = '明日魔法書';
 $book = 'P1010490040';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/12/7 (269KB)');
-ShowVEpubDownload('2022/12/7 (269KB)');
+ShowUpdbDownload('2022/12/5');
+ShowEpubDownload('2022/12/5');
+ShowVEpubDownload('2022/12/5');
 BookSectionEnd();
 ?>
 <img src="covers/1010490040.jpg" HSPACE=8 align=right>
