--- a/Share/1010490041.html
+++ b/Share/1010490041.html
@@ -12,8 +12,9 @@ $title = '空影之書';
 $book = 'P1010490041';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/12/14 (427KB)');
-ShowVEpubDownload('2022/12/14 (427KB)');
+ShowUpdbDownload('2022/12/14');
+ShowEpubDownload('2022/12/14');
+ShowVEpubDownload('2022/12/14');
 BookSectionEnd();
 ?>
 <img src="covers/1010490041.jpg" HSPACE=8 align=right>
