--- a/Share/1010490011.html
+++ b/Share/1010490011.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷六：我是傳奇';
 $book = 'P1010490011';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/23 (158KB)');
-ShowVEpubDownload('2022/11/23 (158KB)');
+ShowUpdbDownload('2022/11/23');
+ShowEpubDownload('2022/11/23');
+ShowVEpubDownload('2022/11/23');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
