--- a/Share/1010490012.html
+++ b/Share/1010490012.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷七：小兵楊帆';
 $book = 'P1010490012';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/23 (268KB)');
-ShowVEpubDownload('2022/11/23 (268KB)');
+ShowUpdbDownload('2022/11/23');
+ShowEpubDownload('2022/11/23');
+ShowVEpubDownload('2022/11/23');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
