--- a/Share/1010490016.html
+++ b/Share/1010490016.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷十一：情深似海';
 $book = 'P1010490016';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/28 (132KB)');
-ShowVEpubDownload('2022/11/28 (132KB)');
+ShowUpdbDownload('2022/11/28');
+ShowEpubDownload('2022/11/28');
+ShowVEpubDownload('2022/11/28');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
