--- a/Share/1010490018.html
+++ b/Share/1010490018.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷十三：監獄風雲';
 $book = 'P1010490018';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/11/30 (241KB)');
-ShowVEpubDownload('2022/11/30 (241KB)');
+ShowUpdbDownload('2022/11/30');
+ShowEpubDownload('2022/11/30');
+ShowVEpubDownload('2022/11/30');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
