--- a/Share/1010490022.html
+++ b/Share/1010490022.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷十七：流人劫';
 $book = 'P1010490022';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/12/2 (200KB)');
-ShowVEpubDownload('2022/12/2 (200KB)');
+ShowUpdbDownload('2022/12/2');
+ShowEpubDownload('2022/12/2');
+ShowVEpubDownload('2022/12/2');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
