--- a/Share/1010490023.html
+++ b/Share/1010490023.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷十八：殺欽差';
 $book = 'P1010490023';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/12/5 (223KB)');
-ShowVEpubDownload('2022/12/5 (223KB)');
+ShowUpdbDownload('2022/12/5');
+ShowEpubDownload('2022/12/5');
+ShowVEpubDownload('2022/12/5');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
