--- a/Share/1010490026.html
+++ b/Share/1010490026.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷二十一：契丹之亂';
 $book = 'P1010490026';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/12/7 (353KB)');
-ShowVEpubDownload('2022/12/7 (353KB)');
+ShowUpdbDownload('2022/12/7');
+ShowEpubDownload('2022/12/7');
+ShowVEpubDownload('2022/12/7');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
