--- a/Share/1010490027.html
+++ b/Share/1010490027.html
@@ -12,8 +12,9 @@ $title = '醉枕江山卷二十二：玲瓏局';
 $book = 'P1010490027';
 BookSectionBegin();
 ShowBookTitle();
-ShowEpubDownload('2022/12/14 (355KB)');
-ShowVEpubDownload('2022/12/14 (355KB)');
+ShowUpdbDownload('2022/12/14');
+ShowEpubDownload('2022/12/14');
+ShowVEpubDownload('2022/12/14');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
