Updated category for book 1010490039

--- a/book/11A9.html
+++ b/book/11A9.html
@@ -12,38 +12,38 @@ BookSectionBegin();
 $title = '冰與火之歌一：權力的遊戲';
 $book = 'G11A9a';
 ShowBookTitle();
-ShowUpdbDownload('2011/7/15 (1109K) 2017/4/7');
-ShowPrcDownload('2011/7/15 (1210K) 2017/4/7');
+ShowUpdbDownload('2022/12/7 (1109K) 2017/4/7 2011/7/15');
+ShowPrcDownload('2017/4/7 (1210K) 2011/7/15');
 ShowMobiDownload('2017/4/7 (3353K)');
-ShowEpubDownload('2011/7/15 (829K) 2017/4/7');
-ShowVEpubDownload('2012/11/23 (830K) 2017/4/7');
+ShowEpubDownload('2022/12/7 (883K) 2017/4/7 2011/7/15');
+ShowVEpubDownload('2022/12/7 (880K) 2017/4/7 2012/11/23');
 Space();
 $title = '冰與火之歌二：列王的紛爭';
 $book = 'G11A9b';
 ShowBookTitle();
-ShowUpdbDownload('2011/7/15 (1188K) 2017/4/7');
+ShowUpdbDownload('2022/12/7 (1190K) 2011/7/15 2017/4/7');
 ShowPrcDownload('2011/7/15 (1302K) 2017/4/7');
 ShowMobiDownload('2017/4/7 (3590K)');
-ShowEpubDownload('2011/7/15 (883K) 2017/4/7');
-ShowVEpubDownload('2017/4/7 (883K)');
+ShowEpubDownload('2022/12/7 (936K) 2011/7/15 2017/4/7');
+ShowVEpubDownload('2022/12/7 (935K) 2017/4/7');
 Space();
 $title = '冰與火之歌三：冰雨的風暴';
 $book = 'G11A9c';
 ShowBookTitle();
-ShowUpdbDownload('2011/7/15 (1490K) 2017/4/7');
+ShowUpdbDownload('2022/12/7 (1492K) 2011/7/15 2017/4/7');
 ShowPrcDownload('2011/7/15 (1616K) 2017/4/7');
 ShowMobiDownload('2017/4/7 (4436K)');
-ShowEpubDownload('2011/7/15 (1082K) 2017/4/7');
-ShowVEpubDownload('2017/4/7 (1083K)');
+ShowEpubDownload('2022/12/7 (1138K) 2011/7/15 2017/4/7');
+ShowVEpubDownload('2022/12/7 (1137K) 2017/4/7');
 Space();
 $title = '冰與火之歌四：群鴉的盛宴';
 $book = 'G11A9d';
 ShowBookTitle();
-ShowUpdbDownload('2011/7/15 (1071K) 2017/5/5');
+ShowUpdbDownload('2022/12/7 (1072K) 2011/7/15 2017/5/5');
 ShowPrcDownload('2011/7/15 (1168K) 2017/5/5');
 ShowMobiDownload('2017/4/7 (3187K) 2017/5/5');
-ShowEpubDownload('2011/7/15 (765K) 2017/5/5');
-ShowVEpubDownload('2013/5/24 (766K) 2017/5/5');
+ShowEpubDownload('2022/12/7 (818K) 2011/7/15 2017/5/5');
+ShowVEpubDownload('2022/12/7 (817K) 2013/5/24 2017/5/5');
 BookSectionEnd();
 ?>
 好讀書櫃《經典版》，感謝鬥牛犬整理製作：「台灣繁體版前二冊翻譯不錯，而後二冊則是災難。故是以簡體中文版為主再逐字檢校，名詞翻譯以簡體版為主。2011配合HBO影集，台灣代理的出版社重新校訂後二冊，有意收藏的讀者可等待上市。」
@@ -53,6 +53,51 @@ BookSectionEnd();
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(冰與火之歌（1~4） LIMing  2017/11/24)<br>
+从贵网站下载的冰与火之歌（1~4），在阅读期间更正了错字一百多处，以下只是更正时做的一部分记录，另一些更正未做记录。<br>
+34章:看扩、迫寻<br>
+39章:格雷果爵、<br>
+43章:捉利尔<br>
+46章:请他进来,<br>
+47章:这两位是玖健<br>
+49章:俳雅雅、太湖<br>
+63章:他想干嘛 让他们看贝<br>
+7章:玛格丽?提利尔 本应和这状 唠叨的母亲<br>
+12章:原离此地<br>
+27章:往东往冬再往东 任她次钻进铺盖<br>
+32章:比嘴<br>
+34章:艾迪,<br>
+36章:声明结束 砍下他丑陋的头颅<br>
+38章:瓦格大人的两件战利晶<br>
+39章:五万:六万 那是一项雕饰精细<br>
+40章:无法还你父亲;<br>
+45章:他上上钩了<br>
+58章:砍人马腿<br>
+61章:蓝礼大人的进勤 话一出口才觉得愚蠢,<br>
+62章:真的下得了乎<br>
+67章:将我们的领土赶出住所 vmar mourghulis<br>
+68章:抓住前倾<br>
+70章:根根烟柱飞口手指般 前部业已堆破碎变形<br>
+74章:一头长毛象嘶鸣;<br>
+2章:建造于断裂角砷 即使是他-黄雨暴在-仙女岛 即使是回忆-灵魂的骨骼<br>
+3章:你在亲口隘口有一支军队<br>
+6章:不若达拉的儿子那么大<br>
+8章:也许对方这面的手段<br>
+9章:既漂亮又冰雪聪明<br>
+10章:那是他自己从赫仑堡带到<br>
+11章:奈斯特。罗伊斯爵士 这间颀的厅堂富丽辉煌<br>
+13章:艾勒莉夫人应和她丈母娘<br>
+14章:就像亚摩利。洛奇爵士 他的治安宫打理<br>
+15章:那塔利<br>
+16章:斯格斯岛曾起兵反叛<br>
+21章:甚至不定能再回到<br>
+22章:孩子们并非在诺佛斯裙抚养长大<br>
+28章:请记得穿上铠甲和铠甲 等死果然<br>
+34章:丽河之间是我的大营<br>
+36章:位于目光烧灼的多恩南海 青莉<br>
+39章:但黑鱼看的眼神<br>
+42章:石冬他就会小 进入沿路堡垒后一码长,八码宽 此群山更高大<br>
+<br>
 (冰與火之歌四 mPDB 2017/5/5)<br>
 金光燦燦的慌/金光燦燦的謊<br>
 鑲鉛/鑲嵌<br>
