Revised upload of book 0321

--- a/Share/0321.html
+++ b/Share/0321.html
@@ -12,17 +12,83 @@ $author = '倪匡';
 $title = '異種人生'; 
 $book = 'I0321';
 ShowBookTitle() ;
-ShowUpdbDownload('2011/9/18 (164K) 2017/7/7');
-ShowPrcDownload('2011/9/18 (162K) 2017/7/7');
-ShowMobiDownload('2016/1/1 (450K) 2017/7/7');
-ShowEpubDownload('2011/9/18 (106K) 2017/7/7');
-ShowVEpubDownload('2016/1/1 (106K) 2017/7/7');
+ShowUpdbDownload('2022/12/7 (165K) 2017/7/7 2011/9/18');
+ShowPrcDownload('2017/7/7 (162K) 2011/9/18');
+ShowMobiDownload('2017/7/7 (450K) 2016/1/1');
+ShowEpubDownload('2022/12/7 (107K) 2017/7/7 2011/9/18');
+ShowVEpubDownload('2022/12/7 (108K) 2017/7/7 2016/1/1');
 BookSectionEnd();
 ?>
-倪匡之衛斯理系列之119。感謝何永鴻整理製作。感謝MisTvAn勘誤。感謝方圓勘誤3處、Evon Teng勘誤43處。<br>
+倪匡之衛斯理系列之119。感謝何永鴻整理製作。感謝MisTvAn勘誤。感謝方圓勘誤3處、Evon Teng勘誤43處、henry142勘誤63處。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+<br>
+(henry142 2022/12/2)<br>
+開談了一會/閒談了一會<br>
+他如同劉伯溫，/他如同劉伯溫一樣，<br>
+可是經綾比他更高/可是紅綾比他更高<br>
+並不重神/並不重視<br>
+（那是應該的）/（那是應該如此）<br>
+這種值物/這種植物<br>
+，榻上躺著一個人，那人躺著一個人，/，榻上躺着一個人，<br>
+死懼/恐懼<br>
+同時河水其臭無比/同時河水變得其臭無比<br>
+在這種候/在這種時候<br>
+向我望，/向我望來，<br>
+用蒙汗藥昏了/用蒙汗藥迷昏了<br>
+服藥之後睡過來/服藥之後睡醒過來<br>
+笑了不停/笑個不停<br>
+更古怪的醒來/更古怪的是醒來<br>
+溫伯如然不是/溫伯如顯然不是<br>
+風馬牛不相于/風馬牛不相干<br>
+外星人的力量形成/外星人的力量所形成<br>
+機開槍/機關槍<br>
+在宣怖/在宣佈<br>
+在空中開電分岔/在空中閃電分岔<br>
+他不能沒有事/他才能沒有事<br>
+可是想深一曾/可是想深一層<br>
+任何害他人的/任何傷害他人的<br>
+打人者變成打自己/打人者會變成打自己<br>
+怔服控制/征服控制<br>
+苦不是/若不是<br>
+情格不合/性格不合<br>
+我沒氣/我沒好氣<br>
+反而死了他自己/反而殺死了他自己<br>
+再仔細想遍/再仔細想想<br>
+當然眞不知道/當時眞不知道<br>
+紅綾叫聲之外/紅綾的叫聲之外<br>
+可是流傳很多/可是確然流傳很多<br>
+自然生的/自然產生的<br>
+就算再這樣分析/就算再怎樣分析<br>
+曲彊/苗疆<br>
+大鬥大塲/大鬧一塲<br>
+就遻事情/就說事情<br>
+維持了一分鐘/維持了十分鐘<br>
+趁些機會/趁此機會<br>
+接下來的時候/接下來的時間<br>
+妄想的環境/妄想的最佳環境<br>
+走向前的短時間中/走向前的短短時間中<br>
+搜尋了一偏/搜尋了一遍<br>
+溫伯如所的一切/溫伯如所說的一切<br>
+完全定情在/完全定性在<br>
+打援了/打擾了<br>
+在研究──夢/在研究……在研究夢<br>
+已經來了我的身前/已經來到了我的身前<br>
+竟然說伯如/竟然說溫伯如<br>
+本來一個睡覺的人/本來一個在睡覺的人<br>
+都像在做夢/都像是在做夢<br>
+首要肯定/首先要肯定<br>
+不完全同音/不完全同意<br>
+所以如他來說/所以對他來說<br>
+認爲部活動/認爲腦部活動<br>
+這是最我迷惑之處/這是最令我迷惑之處<br>
+也是完全沒有異議/也不是完全沒有異議<br>
+可以到任何時間的地方/可以到任何時間的任何地方<br>
+時間出乎意料之後/時間出乎意料之後的長<br>
+話才出口/話才一出口<br>
+只有一個瘋瘋癲癲，/只有一個瘋瘋癲癲的瘋僧，<br>
+<br>
 (Evon Teng 2017/7/7)<br>
 給你一把擾/給你一打擾<br>
 看自然而然深深地吸了一口氣/自然而然深深地吸了一口氣<br>
