Updated upload for book 17XS

--- a/book/17XS.html
+++ b/book/17XS.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("卡琳．亞弗提根《失蹤》");
+SetTitle("卡琳．亞弗提根【失蹤】");
 SetLink('<a href="?M=hd&P=mystery-2">懸疑小說 書目</a>');
 </script>
 
@@ -12,15 +12,15 @@ $title = '失蹤';
 $book = 'E17XS';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/12/1 (278K)');
+ShowUpdbDownload('2022/12/9 (278K) 2017/12/1');
 ShowPrcDownload('2017/12/1 (278K)');
 ShowMobiDownload('2017/12/1 (840K)');
-ShowEpubDownload('2017/12/1 (224K)');
-ShowVEpubDownload('2017/12/1 (224K)');
+ShowEpubDownload('2022/12/9 (224K) 2017/12/1');
+ShowVEpubDownload('2022/12/9 (224K) 2017/12/1');
 BookSectionEnd();
 ?>
 <img src="covers/17XS.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者繆靜芬。<br>
+好讀書櫃【典藏版】，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者繆靜芬。<br>
 <br>西碧拉過慣了流浪街頭的日子，但她決定今晚要過得特別一點！她在斯德哥爾摩知名的格蘭大飯店裡，找上了一名看起來像暴發戶的中年男子，讓她為自己的晚餐和高級套房買單。這個任務一點也不難，只要他對自己產生了濃厚的興趣。這樣的夜晚似乎好得無以復加，只是當她在翌日早晨醒來之後，一切卻都變了調。<br>
 <br>
 五十一歲的約根．葛蘭堡被發現陳屍在格蘭大飯店的房間內，屍體受到粗略的肢解，並且體內的器官也被移除了。<br>
@@ -39,6 +39,26 @@ BookSectionEnd();
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+<br>
+(Miaoyi 2022/12/9)<br>
+準備遇五離開/準備週五離開<br>
+譬方/警方<br>
+﹁賣貝，/﹁寶貝，<br>
+鐮匙和往常一樣/鑰匙和往常一樣<br>
+門應和客廳之間/門廳和客廳之間<br>
+一座動物圔/一座動物園<br>
+瞽察/警察<br>
+餐察/警察<br>
+揉得皺皴的/揉得皺皺的<br>
+7一Eleven/7-Eleven<br>
+聊著自己的寶賣/聊著自己的寶貝<br>
+拘屁倒灶/狗屁倒灶<br>
+芥未/芥末<br>
+她動著頭/?<br>
+開始一妳要/開始？妳要<br>
+閣樓冷颺颼/閣樓冷颼颼<br>
+，一一副得意洋洋/，一副得意洋洋<br>
+<br>
 (mPDB 2017/12/1)<br>
 遣囑/遺囑<br>
 剌激/刺激<br>
