--- a/Share/1010490040.html
+++ b/Share/1010490040.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("西西莉雅．艾亨【明日魔法書】");
-SetLink('<a href="?M=hd&P=fiction-7">小說園地 書目</a>');
+SetLink('<a href="?M=hd&P=romance-6">言情小說 書目</a>');
 </script>
 
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
