--- a/book/audioAB001.html
+++ b/book/audioAB001.html
@@ -13,6 +13,7 @@ PlayMP3('AB001-03', '第三篇《趙盾：施食得恩報》書亞錄音 2022/11
 PlayMP3('AB001-04', '第四篇《孔子：食禮趣聞》書亞錄音 2022/11/28');
 PlayMP3('AB001-05', '第五篇《劉邦：食典的來龍去脈》書亞錄音 2022/12/3');
 PlayMP3('AB001-06', '第六篇《東方朔：滑稽吃相》書亞錄音 2022/12/9');
+PlayMP3('AB001-07', '第七篇《曹操：食性露本性》書亞錄音 2022/12/15');
 
 ?>
 
