--- a/Share/03A2.html
+++ b/Share/03A2.html
@@ -12,17 +12,59 @@ $author = '倪匡';
 $title = '身外化身'; 
 $book = 'I03A2';
 ShowBookTitle() ;
-ShowUpdbDownload('2011/9/22 (160K) 2016/1/1');
+ShowUpdbDownload('2022/12/20 (160K) 2016/1/1 2011/9/22');
 ShowPrcDownload('2011/9/22 (150K) 2016/1/1');
 ShowMobiDownload('2016/1/1 (432K)');
-ShowEpubDownload('2011/9/22 (101K) 2016/1/1');
-ShowVEpubDownload('2013/8/30 (101K) 2016/1/1');
+ShowEpubDownload('2022/12/20 (101K) 2016/1/1 2011/9/22');
+ShowVEpubDownload('2022/12/20 (101K) 2016/1/1 2013/8/30');
 BookSectionEnd();
 ?>
-倪匡之衛斯理系列之126。感謝何永鴻整理製作。感謝MisTvAn、邱應琦勘誤。感謝方圓勘誤2處。<br>
+倪匡之衛斯理系列之126。感謝何永鴻整理製作。感謝MisTvAn、邱應琦勘誤。感謝方圓勘誤2處。感謝henry142勘誤40處。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(henry142 2022/12/20)<br>
+普通的事實/普遍的事實<br>
+人類的一份了/人類的一份子<br>
+同我撞來/向我撞來<br>
+一直返到了牆前/一直退到了牆前<br>
+才會這種樣了/才會這種樣子<br>
+知職轉移的方法/知識轉移的方法<br>
+杜良這個人討厭之概/杜良這個人討厭之極<br>
+就絕對不會現在這樣子了/就絕對不會是現在這樣子了<br>
+同杜良詳細解說/向杜良詳細解說<br>
+勒曼瞥院/勒曼醫院<br>
+勒曼臀院/勒曼醫院<br>
+勒曼督院/勒曼醫院<br>
+卻又具活的腦/卻又是活的腦<br>
+很多人那竭力主張/很多人都竭力主張<br>
+等到決定下之後/等到決定了之後<br>
+具甚麽關係/是甚麽關係<br>
+白素向亮聲指一指/白素向亮聲指了一指<br>
+去勒曼醫院阻止的行動/去勒曼醫院阻止杜良的行動<br>
+又是驚恐、又具憤怒/又是驚恐、又是憤怒<br>
+常然是將杜良/當然是將杜良<br>
+她並有對我/她並沒有對我<br>
+這些波形毫意義/這些波形毫無意義<br>
+處死亡狀態/處於死亡狀態<br>
+一直於存活狀態/一直處於存活狀態<br>
+同杜良尋求/向杜良尋求<br>
+處敵對地位/處於敵對地位<br>
+亮聲更具狼狽/亮聲更是狼狽<br>
+亮星竟然/亮聲竟然<br>
+偏偏又耍尋根究柢/偏偏又要尋根究柢<br>
+杜良了一口氣/杜良吸了一口氣<br>
+無諭如何/無論如何<br>
+普通化/普遍化<br>
+只接四天/只要四天<br>
+開始作正常狀態下/開始在正常狀態下<br>
+道些複製人/這些複製人<br>
+有這樣感覺的/有這種感覺的<br>
+杜良喚了一口氣/杜良嘆了一口氣<br>
+忘了是抗議/忘了提抗議<br>
+就非在他們的欺騙/並非在他們的欺騙<br>
+瞥告/警告<br>
+<br>
 (mPDB 2016/1/1)<br>
 修改標點 (數處)<br>
 意大利/義大利<br>
