--- a/Share/03A2.html
+++ b/Share/03A2.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("倪匡《身外化身》");
+SetTitle("倪匡【身外化身】");
 SetLink('<a href="?M=hd&P=scifi-9">奇幻小說 書目</a>');
 </script>
 
