--- a/Share/0321.html
+++ b/Share/0321.html
@@ -12,17 +12,22 @@ $author = '倪匡';
 $title = '異種人生'; 
 $book = 'I0321';
 ShowBookTitle() ;
-ShowUpdbDownload('2022/12/7 (165K) 2017/7/7 2011/9/18');
+ShowUpdbDownload('2022/12/27 (165K) 2017/7/7 2011/9/18');
 ShowPrcDownload('2017/7/7 (162K) 2011/9/18');
 ShowMobiDownload('2017/7/7 (450K) 2016/1/1');
-ShowEpubDownload('2022/12/7 (107K) 2017/7/7 2011/9/18');
-ShowVEpubDownload('2022/12/7 (108K) 2017/7/7 2016/1/1');
+ShowEpubDownload('2022/12/27 (107K) 2017/7/7 2011/9/18');
+ShowVEpubDownload('2022/12/27 (108K) 2017/7/7 2016/1/1');
 BookSectionEnd();
 ?>
-倪匡之衛斯理系列之119。感謝何永鴻整理製作。感謝MisTvAn勘誤。感謝方圓勘誤3處、Evon Teng勘誤43處、henry142勘誤63處。<br>
+倪匡之衛斯理系列之119。感謝何永鴻整理製作。感謝MisTvAn勘誤。感謝方圓勘誤3處。Evon Teng勘誤43處。henry142勘誤63處。henry142勘誤3處。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+<br>
+(henry142 2022/12/27)<br>
+淸/清<br>
+爲/為<br>
+衆/眾<br>
 <br>
 (henry142 2022/12/2)<br>
 開談了一會/閒談了一會<br>
