--- a/Share/03A2.html
+++ b/Share/03A2.html
@@ -12,17 +12,23 @@ $author = '倪匡';
 $title = '身外化身'; 
 $book = 'I03A2';
 ShowBookTitle() ;
-ShowUpdbDownload('2022/12/20 (160K) 2016/1/1 2011/9/22');
+ShowUpdbDownload('2022/12/26 (160K) 2016/1/1 2011/9/22');
 ShowPrcDownload('2011/9/22 (150K) 2016/1/1');
 ShowMobiDownload('2016/1/1 (432K)');
-ShowEpubDownload('2022/12/20 (101K) 2016/1/1 2011/9/22');
-ShowVEpubDownload('2022/12/20 (101K) 2016/1/1 2013/8/30');
+ShowEpubDownload('2022/12/26 (101K) 2016/1/1 2011/9/22');
+ShowVEpubDownload('2022/12/26 (101K) 2016/1/1 2013/8/30');
 BookSectionEnd();
 ?>
-倪匡之衛斯理系列之126。感謝何永鴻整理製作。感謝MisTvAn、邱應琦勘誤。感謝方圓勘誤2處。感謝henry142勘誤40處。<br>
+倪匡之衛斯理系列之126。感謝何永鴻整理製作。感謝MisTvAn、邱應琦勘誤。感謝方圓勘誤2處。感謝henry142勘誤40處。FishMan勘誤3處。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+<br>
+(FishMan 2022/12/26)<br>
+淸/清<br>
+爲/為<br>
+衆/眾<br>
+<br>
 (henry142 2022/12/20)<br>
 普通的事實/普遍的事實<br>
 人類的一份了/人類的一份子<br>
