--- a/book/audioAB001.html
+++ b/book/audioAB001.html
@@ -15,6 +15,7 @@ PlayMP3('AB001-05', '第五篇《劉邦：食典的來龍去脈》書亞錄音 2
 PlayMP3('AB001-06', '第六篇《東方朔：滑稽吃相》書亞錄音 2022/12/9');
 PlayMP3('AB001-07', '第七篇《曹操：食性露本性》書亞錄音 2022/12/15');
 PlayMP3('AB001-08', '第八篇《諸葛亮：發明的軍食》書亞錄音 2022/12/22');
+PlayMP3('AB001-09', '第九篇《張翰：戀味避禍》書亞錄音 2022/12/29');
 
 ?>
 
