Upload revised book 1010490044

--- a/Share/1010490044.html
+++ b/Share/1010490044.html
@@ -12,13 +12,13 @@ $title = '瘋狂書迷俱樂部';
 $book = 'P1010490044';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/12/19');
-ShowEpubDownload('2022/12/19');
-ShowVEpubDownload('2022/12/19');
+ShowUpdbDownload('2023/1/3 2022/12/19');
+ShowEpubDownload('2023/1/3 2022/12/19');
+ShowVEpubDownload('2023/1/3 2022/12/19');
 BookSectionEnd();
 ?>
 <img src="covers/1010490044.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。sue1289/McDull勘誤6處。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -45,6 +45,13 @@ BookSectionEnd();
 一九八四年生。曾任職版權經紀公司，現為自由文字工作者。譯有小說《起司》（寶瓶）等。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong><a href="?M=hd&P=pr">勘誤表</a>：</strong><br>
+(sue1289/McDull 2023/1/3)<br>
+．連和她，起走在冰霜/．連和她一起走在冰霜<br>
+以為那鳥揪著一隻/以為那鳥抓著一隻<br>
+談論鶉和網球鞋，她/談論鶚和網球鞋，她<br>
+可以寫成，個很好的/可以寫成一個很好的<br>
+其他像我，樣的孩子/其他像我一樣的孩子<br>
+承受重量．我/承受重量，我<br>
 </font>
 </td></tr></table>
