--- a/Share/1010490046.html
+++ b/Share/1010490046.html
@@ -18,7 +18,7 @@ ShowVEpubDownload('2023/1/9');
 BookSectionEnd();
 ?>
 <img src="covers/1010490046.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝李思聰整理製作，感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝IT整理製作，感謝chin223提供掃瞄檔。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
