--- a/Share/1010490043.html
+++ b/Share/1010490043.html
@@ -12,13 +12,13 @@ $title = '神秘打字員';
 $book = 'P1010490043';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/12/16');
-ShowEpubDownload('2022/12/16');
-ShowVEpubDownload('2022/12/16');
+ShowUpdbDownload('2023/1/10 2022/12/16');
+ShowEpubDownload('2023/1/10 2022/12/16');
+ShowVEpubDownload('2023/1/10 2022/12/16');
 BookSectionEnd();
 ?>
 <img src="covers/1010490043.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Angela Huang整理製作及提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Angela Huang整理製作及提供掃瞄檔。sue1289/McDull勘誤28處。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -55,6 +55,36 @@ Fox即將改編成電影，由英國知名女星綺拉．奈特莉（Keira Knigh
 臺灣師範大學翻譯研究所博士。英國布里斯托大學英語教學碩士。喜歡翻譯小說，以譯筆輕剖書中人物生命故事中的肌理和溫度。已出版作品包括譯作《五個傷痕》、《微寫作》；翻譯教學著作《英中筆譯1》、《英中筆譯2》及英語教學著作《遜咖日記單字本》系列。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong><a href="?M=hd&P=pr">勘誤表</a>：<strong><br>
+<br>
+(sue1289/McDull 2023/1/10)<br>
+怪，道酒從來用不/怪，這酒從來用不<br>
+好像窗己會隨時/好像自己會隨時<br>
+新將十誠刻在/新將十誡刻在<br>
+子，鬼鬼崇崇東張/子，鬼鬼祟祟東張<br>
+，但很快移就移開/，但很快就移開<br>
+積到腳踩的高度。地/積到腳踝的高度。地<br>
+生了根似的我又看著那/生了根似的。我又看著那<br>
+這時停了下，朝/這時停一下，朝<br>
+，也很前煎熬，只/，也很煎熬，只<br>
+已經灘牌了，/已經攤牌了，<br>
+了我肩頭。，玫瑰，/了我肩頭。玫瑰，<br>
+恰似一頂禮貌安坐/恰似一頂禮帽安坐<br>
+不住雛起了眉頭。這/不住皺起了眉頭。這<br>
+」這稼伙看起/」這傢伙看起<br>
+，想把手摧乾。儘/，想把手擦乾。儘<br>
+。歌劇內客挺有/。歌劇內容挺有<br>
+有人認錯．。」歐/有人認錯。」歐<br>
+令人釾異的事/令人訝異的事<br>
+。她是，幅畫，以/。她是一幅畫，以<br>
+分局報案，，一間又一/分局報案，一間又一<br>
+準備晉陸高階探長/準備晉陞高階探長<br>
+約莫二十歲五歲上下/約莫二十五歲上下<br>
+，但心裡遺是牽牽/，但心裡還是牽牽<br>
+處境有點難難就是/處境有點艱難就是<br>
+把我撲到，奪/把我撲倒，奪<br>
+。我脅下腰，撥/。我彎下腰，撥<br>
+我也想Einho/我也想向Einho<br>
+好好慶祝|一下/好好慶祝一下<br>
 </font>
 </td></tr></table>
